add index.html for jafr

--- a/_pages/jafr.html
+++ b/_pages/jafr.html
@@ -2,13 +2,13 @@
 layout: archive
 title: "Talks and presentations"
 permalink: /jafr/
-author_profile: true
+author_profile: false
 ---
 
 
 
 
-<html>
+
 <head>
 	<title> به دست آوردن عدد ابجد </title>
 	<meta charset="UTF-8">
@@ -363,7 +363,7 @@ function InitAbjad()
 
 </script>
 </body>
-</html>
+
 
 {% for post in site.talks reversed %}
   {% include archive-single-talk.html %}
