--- a/_pages/jafr.html
+++ b/_pages/jafr.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Talks and presentations"
+title: "به دست آوردن عدد ابجد "
 permalink: /jafr/
 author_profile: false
 ---
