--- a/_pages/jafr.html
+++ b/_pages/jafr.html
@@ -10,7 +10,7 @@ author_profile: false
 
 
 <head>
-	<title> به دست آوردن عدد ابجد </title>
+	<title> 234به دست آوردن عدد ابجد </title>
 	<meta charset="UTF-8">
 	<meta name="description" content=" پیدا کردن و محاسبه عدد ابجد و تکسیر کلمات ابجد - تکسیر " />
 
