add index.html for jafr

--- a/_pages/jafr.html
+++ b/_pages/jafr.html
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "به دست آوردن عدد ابجد "
+title: "123به دست آوردن عدد ابجد "
 permalink: /jafr/
 author_profile: false
 ---
