--- a/_pages/jafr.html
+++ b/_pages/jafr.html
@@ -34,7 +34,7 @@ author_profile: false
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dropbox.js/4.0.1/Dropbox-sdk.js"></script>
 
 <a href="http://telegram.me/Mojtabaaaaaaaaaaaaaaaaaaaaa">contact me on Telegram</a>
-	<h1 style="float:right"> پیدا کردن عدد ابجد (کادر سبز)  و تکسیر(کادر زرد)  کلمات</h1>
+	<h1 style="float:right"> پیدا کsfsdfsردن عدد ابجد (کادر سبز)  و تکسیر(کادر زرد)  کلمات</h1>
 
 	
 <br>
