--- a/_pages/jafr.html
+++ b/_pages/jafr.html
@@ -1,16 +1,7 @@
----
-layout: single
-title: "123به دست آوردن عدد ابجد "
-permalink: /jafr/
-author_profile: false
----
 
-
-
-
-
+<html>
 <head>
-	<title> 234به دست آوردن عدد ابجد </title>
+	<title> به دست آوردن عدد ابجد </title>
 	<meta charset="UTF-8">
 	<meta name="description" content=" پیدا کردن و محاسبه عدد ابجد و تکسیر کلمات ابجد - تکسیر " />
 
@@ -27,14 +18,20 @@ author_profile: false
 	</script>
 </head>
 
+<style>
+body {
+    background-color:white
+}
 
+</style>
+<body>
 
 <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dropbox.js/4.0.1/Dropbox-sdk.js"></script>
 
 <a href="http://telegram.me/Mojtabaaaaaaaaaaaaaaaaaaaaa">contact me on Telegram</a>
-	<h1 style="float:right"> پیدا کsfsdfsردن عدد ابجد (کادر سبز)  و تکسیر(کادر زرد)  کلمات</h1>
+	<h1 style="float:right"> پیدا کردnnnnnن عدد ابجد (کادر سبز)  و تکسیر(کادر زرد)  کلمات</h1>
 
 	
 <br>
@@ -356,7 +353,6 @@ function InitAbjad()
 }
 
 </script>
-
-
-
+</body>
+</html>
 
