--- a/_pages/jafr.html
+++ b/_pages/jafr.html
@@ -1,3 +1,12 @@
+---
+layout: page
+title: "Talks and presentations"
+permalink: /jafr/
+author_profile:false
+---
+
+
+
 
 <html>
 <head>
@@ -31,7 +40,7 @@ body {
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dropbox.js/4.0.1/Dropbox-sdk.js"></script>
 
 <a href="http://telegram.me/Mojtabaaaaaaaaaaaaaaaaaaaaa">contact me on Telegram</a>
-	<h1 style="float:right"> پیدا کردnnnnnن عدد ابجد (کادر سبز)  و تکسیر(کادر زرد)  کلمات</h1>
+	<h1 style="float:right"> پیدا کردن عدد ابجد (کادر سبز)  و تکسیر(کادر زرد)  کلمات</h1>
 
 	
 <br>
@@ -356,3 +365,6 @@ function InitAbjad()
 </body>
 </html>
 
+{% for post in site.talks reversed %}
+  {% include archive-single-talk.html %}
+{% endfor %}
